--- a/aionbook_theme/css/pages.css
+++ b/aionbook_theme/css/pages.css
@@ -1,6 +1,7 @@
 .desktop__inner {
     min-width: 1200px;
     margin: 0 auto;
+    overflow: hidden; /* 내부 요소가 넘치지 않도록 설정 */
   }
   
 /* 메인 섹션 설정 */
@@ -10,6 +11,7 @@
   align-items: center;
   position: relative; /* 다른 섹션과 겹치지 않도록 상대 위치 지정 */
   z-index: 10; /* 다른 요소들과 겹치지 않도록 z-index 설정 */
+  margin-bottom: 80px; /* learning-system 섹션과의 간격 */
 }
 /* 메인 내부 */
 .main__inner {
@@ -17,7 +19,6 @@
   height: 532px;
   position: relative;
   top: 90px;
-  opacity: 0.9;
   display: flex;
   background-color: #465ff1; /* 배경 색상 */
   justify-content: center;
@@ -27,7 +28,7 @@
 
 .main__inner_title_group{
   display: grid;
-  margin-bottom: 40px;
+
 }
 
 /* 메인 제목 */
@@ -50,16 +51,20 @@
 
 /* 메인 설명 텍스트 */
 .main__inner_title_text {
-  font-size: 24px;
+  font-size: 28px;
+  font-weight: 50;
   color: #ffffff;
   margin-bottom: 5px;
+  letter-spacing: -0.03em;
 }
 
 /* 버튼 랩퍼 */
 .main__button-wrap {
   display: flex;
   gap: 20px;
-  justify-content: center;
+  /* justify-content: center; */
+  margin-top: 30px;
+  margin-right: 30px;
 }
 
   /* .main__inner img {
@@ -120,14 +125,14 @@
 /* book-wrapper: bookimg와 bookbgimg를 감싸는 div */
 .book-wrapper {
   position: relative; /* 두 이미지를 겹치기 위한 상대 위치 */
-  width: 565px; /* wrapper의 크기 */
-  height: 458px;
+  width: 500px; /* wrapper의 크기 */
+  height: 520px;
 }
 
 /* bookimg 앞쪽 이미지 */
 .bookimg {
-  position: relative;
-  top: 0;
+  position: absolute; /* bookbgimg보다 앞에 배치 */
+  top: 110px;
   left: 0;
   width: 565px;
   height: 306px;
@@ -136,13 +141,12 @@
 
 /* bookbgimg 배경 이미지 */
 .bookbgimg {
-  position: absolute; /* 배경 이미지를 고정 배치 */
+  position: absolute;
+  top: 30px;
+  left: 60px;
   width: 457px;
   height: 458px;
-  top: 128px;
-  left: 500px;
-  z-index: 2; /* bookimg보다 뒤에 배치 */
-  opacity: 0; /* 필요 시 opacity 적용 */
+  z-index: 1;
 }
 
 /*  */
@@ -672,8 +676,15 @@
     }
   }
   @media screen and (max-width: 767px) {
-    /* .main__inner {
-      width: inherit;
+    .desktop__inner {
+      min-width: 100%;
+      width: 100%;
+    }
+    .main {
+      margin-bottom: 60px;
+    }
+    .main__inner {
+      /* width: inherit;
       -webkit-box-align: center;
       -webkit-align-items: center;
       -ms-flex-align: center;
@@ -684,9 +695,61 @@
       -webkit-flex-direction: column-reverse;
       -ms-flex-direction: column-reverse;
       flex-direction: column-reverse;
-      padding: 40px 24px 80px;
+      padding: 40px 24px 80px; */
+      width: 100%;
+      height: auto;
+      padding: 40px 20px;
+      flex-direction: column;
+      gap: 20px;
     }
-    .main__inner img {
+    .main__inner_title_group {
+      padding-left: 0;
+      text-align: center;
+    }
+    .main__inner_title {
+      font-size: 24px;
+    }
+    .main__inner_title_bold {
+      font-size: 48px;
+    }
+    .main__inner_title_text {
+      font-size: 18px;
+    }
+    .main__button-wrap {
+      flex-direction: column;
+      align-items: center;
+      gap: 15px;
+      margin-right: 0;
+    }
+    .hero-btn {
+      width: 100%;
+      max-width: 200px;
+
+    } .book-wrapper {
+      width: 100%;
+      height: 400px;
+      margin-bottom: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .bookbgimg {
+      width: 80%;
+      height: auto;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  
+    .bookimg {
+      width: 90%;
+      height: auto;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+    /* .main__inner img {
       width: 327px;
     }
     .main__text {
