signup123 btn text수정

--- a/aionbook_theme/css/mainsignup1.css
+++ b/aionbook_theme/css/mainsignup1.css
@@ -172,5 +172,6 @@ body { font-family: 'NanumSquareRound';
 @media screen and (max-width: 767px) {
     .mainsignup1_inner{
         width: 100%;
+        padding: 30px 3px;
     }
 }
