--- a/aionbook_theme/css/coursegrid.css
+++ b/aionbook_theme/css/coursegrid.css
@@ -6,11 +6,14 @@
   }
   
   .course-grid__title {
+    font-family: 'NanumRoundEB';
     text-align: center;
-    font-size: 40px;
+    font-size: 34px;
     line-height: 60px;
     font-weight: 800;
     margin-bottom: 40px;
+    letter-spacing: -0.04em;
+    border: 0.2px solid var(--, #151515);
   }
   
   .course-grid__container {
