--- a/aionbook_theme/css/learning.css
+++ b/aionbook_theme/css/learning.css
@@ -2,7 +2,7 @@
   /* learning.css ::AI 온북 플랫폼의 특징 */
   /*  */
 .learning-system {
-    background: #F6F6F6;
+    /* background: #F6F6F6; */
   }
   .learning-system__inner {
     width: 1200px;
@@ -19,17 +19,20 @@
     -webkit-flex-direction: column;
     -ms-flex-direction: column;
     flex-direction: column;
-    padding: 30px;
   }
   .learning-system__title {
+    font-family: 'NanumRoundEB';
+    margin-top: 10px;
     text-align: center;
-    font-size: 40px;
+    font-size: 34px;
+    font-weight: 800;
     line-height: 60px;
-    font-weight: 700;
-    color: #000;
+    letter-spacing: -0.04em;
+    text-align: center;    
+    border: 1px solid var(--, #151515)
   }
   .learning-system__list {
-    margin-top: 80px;
+    margin-top: 30px;
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -39,18 +42,20 @@
   .learning-system__item {
     width: calc((100% - 72px) / 4); /* 4개 아이템을 위한 너비 조정 */
     background-color: #fff;
-    height: 330px; /* 이미지 크기에 맞춰 높이 조정 */
+    height: 304px; /* 이미지 크기에 맞춰 높이 조정 */
     border-radius: 10px;
     display: flex;
     flex-direction: column;
     align-items: center; /* 내부 요소 중앙 정렬 */
     text-align: center; /* 텍스트 중앙 정렬 */
+    box-shadow: 0px 4px 32.5px -7px #A3A3A340;
+
   }
 
   /* 이미지 컨테이너 스타일 */
 .plat1, .plat2, .plat3, .plat4 {
   width: 228px;
-  height: 177px;
+  height: 170px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -65,28 +70,30 @@
 
 .learning-system__text {
   font-family: 'Pretendard';
-  font-weight: 700;
+  /* font-weight: 700;
   line-height: 26px;
   letter-spacing: -0.02em;
   text-align: center;
-  width: 100%;
+  width: 100%; */
 }
 
   .learning-system__text p {
-    font-size: 30px;
-    line-height: 36px;
-    font-weight: 700;
-    padding-top: 21px;
+    font-family: 'Pretendard';
+    font-size: 24px;
+    line-height: 24px;
+    font-weight: 600;
+    padding-top: 10px;
     text-align: center;
+    letter-spacing: -0.02em;
   }
   .learning-system__text span {
     display: inline-block;
     padding-top: 12px;
-    font-size: 18px;
-    line-height: 30px;
-    font-weight: 500;
-    line-height: 24px;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 21px;
     letter-spacing: -0.03em;
+    text-align: center;
     color: #323232;
   }
 
