--- a/aionbook_theme/css/pages.css
+++ b/aionbook_theme/css/pages.css
@@ -1,5 +1,19 @@
+@font-face {
+  font-family: "NanumEB";
+  font-weight: normal;
+  font-style: normal;
+  src: url(../fonts/NanumSquareEB.woff) format("woff");
+}
+
+@font-face {
+  font-family: "NanumRoundEB";
+  font-weight: normal;
+  font-style: normal;
+  src: url(../fonts/NanumSquareRoundEB.woff) format("woff");
+}
+
 .desktop__inner {
-    min-width: 1200px;
+    min-width: 100%;
     margin: 0 auto;
     overflow: hidden; /* 내부 요소가 넘치지 않도록 설정 */
   }
@@ -16,9 +30,9 @@
 /* 메인 내부 */
 .main__inner {
   width: 100%;
-  height: 532px;
+  height: 430px;
   position: relative;
-  top: 90px;
+  top: 60px;
   display: flex;
   background-color: #465ff1; /* 배경 색상 */
   justify-content: center;
@@ -33,11 +47,12 @@
 
 /* 메인 제목 */
 .main__inner_title {
-  font-size: 36px;
+  font-size: 34px;
   font-weight: 800;
   color: #ffffff;
   margin-bottom: 5px;
   letter-spacing: -0.02em;
+  border: 1px solid var(--, #151515);
 }
 
 /* 메인 강조 제목 */
@@ -46,7 +61,7 @@
   font-weight: 800;
   color: #ffffff;
   margin-bottom: 5px;
-  letter-spacing: -0.02em;
+  letter-spacing: -0.04em;
 }
 
 /* 메인 설명 텍스트 */
@@ -90,13 +105,13 @@
 
 /* 체험하기 버튼 */
 .hero-btn--experience {
-  width: 150px;
+  width: 140px;
   height: 50px;
   border: 1px solid #FFFFFF; /* 테두리 */
   background-color: #465FF1; /* 배경색 */
   color: #FFFFFF; /* 텍스트 색상 */
   padding: 10px 20px;
-  border-radius: 10px;
+  border-radius: 14px;
   opacity: 0.85;
 }
 
@@ -107,13 +122,13 @@
 
 /* 도입문의 버튼 */
 .hero-btn--inquiry {
-  width: 150px;
+  width: 140px;
   height: 50px;
   border: 1px solid #465FF1; /* 테두리 */
   background-color: #FFFFFF; /* 배경색 */
   color: #465FF1; /* 텍스트 색상 */
   padding: 10px 20px;
-  border-radius: 10px;
+  border-radius: 14px;
   opacity: 0.85;
 }
 
@@ -123,29 +138,30 @@
 }
 
 /* book-wrapper: bookimg와 bookbgimg를 감싸는 div */
-.book-wrapper {
-  position: relative; /* 두 이미지를 겹치기 위한 상대 위치 */
-  width: 500px; /* wrapper의 크기 */
-  height: 520px;
+.book-wrapper {/* 두 이미지를 겹치기 위한 상대 위치 */
+  position: relative; 
+  width: 500px;
+  height: 400px;
 }
 
 /* bookimg 앞쪽 이미지 */
 .bookimg {
   position: absolute; /* bookbgimg보다 앞에 배치 */
-  top: 110px;
-  left: 0;
-  width: 565px;
-  height: 306px;
+  top: 80px;
+  right: 90px;
+  width: 455px;
+  height: 247px;
   z-index: 15; /* bookbgimg보다 앞에 배치 */
 }
 
 /* bookbgimg 배경 이미지 */
 .bookbgimg {
   position: absolute;
-  top: 30px;
+  top: 20px;
   left: 60px;
-  width: 457px;
-  height: 458px;
+  width: 368px;
+  height: 368px;
+  width: 368px;
   z-index: 1;
 }
 
