--- a/aionbook_theme/css/schoolgroup.css
+++ b/aionbook_theme/css/schoolgroup.css
@@ -2,24 +2,23 @@
   /* schoolgroup.css ::AI 온북 그룹들 */
   /*  */
 .schoolgroup{
-
-}
-.schoolgroup_inner {
-    width: 1200px;
-    margin: 0 auto;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-align-content: center;
-    -ms-flex-line-pack: center;
-    align-content: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
+    align-items: center;
+    overflow: hidden;
+    width: 100%;
+    position: relative;
+}
+
+.schoolgroup_inner {
+    width: 3171px;
+    height: 700px;
+    position: relative;
+    display: flex;
     flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
   }
+  
   .schoolgroup_title {
     font-family: 'NanumRoundEB';
     margin-top: 10px;
@@ -28,32 +27,69 @@
     font-weight: 800;
     line-height: 60px;
     letter-spacing: -0.04em;
-    text-align: center;    
-    border: 1px solid var(--, #151515)
+    text-align: center;
   }
   .schoolgroup_list {
-    margin-top: 30px;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
+    margin: 30px 0;
     display: flex;
-    gap: 24px;
+    width: 300%;  /* 이미지들이 3배 크기로 복제되어 연속적으로 보이게 함 */
+    animation: slide 100s linear infinite;  /* 20초동안 천천히 무한 반복 */
+  }
+  
+  .schoolgroup_item {
+    display: flex;
+    gap: 10px;
+  }
+  
+  .schoolgroup_item img {
+    width: auto;
+    height: 250px;
+    object-fit: contain;
+  }
+  @keyframes slide {
+    0% {
+      transform: translateX(0);
+    }
+    100% {
+      transform: translateX(-50%);  /* 전체 너비의 절반만큼 이동 */
+    }
+  }
+  
+  /* hover시 애니메이션 일시정지 */
+  .schoolgroup_list:hover {
+    animation-play-state: paused;
   }
 
-  /* 모바일 (최대 767px) */
-  @media screen and (max-width: 767px) {
-    .learning-system__inner {
+/* 모바일 (최대 767px) */
+@media screen and (max-width: 767px) {
+    .schoolgroup_inner {
       width: 100%;
-      padding: 60px 16px;
+      height: 250px;
     }
-    .learning-system__item {
-        width: 100%;
-        height: auto;
-        min-height: 320px; /* 최소 높이 설정 */
-      }
-}
-
+    
+    .schoolgroup_title {
+      font-size: 24px;
+      line-height: 40px;
+    }
+    
+    .schoolgroup_item img {
+      height: 150px;
+    }
+  }
+  
   /* 태블릿 크기 대응 */
   @media screen and (min-width: 768px) and (max-width: 1199px) {
-
+    .schoolgroup_inner {
+      width: 100%;
+      height: 300px;
+    }
+    
+    .schoolgroup_title {
+      font-size: 28px;
+      line-height: 50px;
+    }
+    
+    .schoolgroup_item img {
+      height: 200px;
+    }
   }
