--- a/aionbook_theme/css/inquiry.css
+++ b/aionbook_theme/css/inquiry.css
@@ -1,20 +1,20 @@
-/*  */
-  /* 도입문의 */
-  /*  */
   .inquiry {
     background-color: #E1E5F4;
   }
+  
   .inquiry__inner {
     width: 1200px;
     margin: 0 auto;
-    padding: 160px 0;
+    padding: 70px 0;
     display: grid;
     justify-content: space-between;
-    align-items: flex-start; /* 레이아웃 정렬 수정 */
+    align-items: flex-start;
   }
+  
   .inquiry__text {
-    color: #fff;
+    width: 100%;
   }
+  
   .inquiry__type {
     font-family: 'Pretendard';
     display: inline-block;
@@ -24,6 +24,7 @@
     font-weight: 500;
     letter-spacing: -0.03em;
   }
+  
   .inquiry__description {
     font-family: 'NanumRoundEB';
     font-size: 34px;
@@ -31,6 +32,7 @@
     font-weight: 800;
     color: #151515;
   }
+  
   .inquiry__sub-description {
     font-family: 'Pretendard';
     display: inline-block;
@@ -41,47 +43,85 @@
     color: #151515;
     margin-bottom: 30px;
   }
+  
   .inquiry__form {
     width: 1200px;
   }
-  .inquiry__input {
-    width: 100%;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
+  
+  .inquiry__row {
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
+    justify-content: space-between;
+    gap: 14px;
+  }
+  
+  .inquiry__input {
+    width: 588px;
+    display: flex;
     flex-direction: column;
     font-weight: 600;
+    position: relative;
+    gap: 14px;
   }
+    
   .inquiry__input + .inquiry__input {
-    margin-top: 16px;
   }
+  
   .inquiry__input label {
-    font-size: 14px;
-    line-height: 20px;
-    color: #A8A8A8;
+    font-family: 'Pretendard';
+    letter-spacing: -0.03em;
+    width: 120px; /* 라벨 너비 설정 */
+    position: absolute;
+    margin-left: 15px;
+    margin-top: 25px;
+    font-size: 20px;
+    text-align: center;
+    color: #151515;
+    border-right: 1px solid #E1E5F3; /* 구분선 border */
   }
-  .inquiry__input input,
-  .inquiry__input textarea {
+  .inquiry__input input {
+    width: 100%;
     margin-top: 6px;
-    height: 48px;
+    height: 64px;
     outline: none;
-    border: none;
-    border-radius: 4px;
-    padding: 10px 15px;
+    border: 1px solid #E1E5F3;
+    border-radius: 14px;
+    font-size: 16px;
+    padding-left: 150px; /* label과 text겹치지 않게 */
+  }
+  .inquiry__input input::placeholder {
+    color: #999;
+  }
+  
+  .inquiry__input_lg {
+    width: 1200px;
+    display: flex;
+    flex-direction: column;
+    font-weight: 600;
+    position: relative;
+    gap: 14px;
+  }
+  .inquiry__input_lg label {
+    font-family: 'Pretendard';
+    margin-left: 15px;
+    width: 1200px; /* 라벨 너비 설정 */
+    position: absolute;
+    top: 15px;
+    font-size: 20px;
+    color: #151515;
+    border-bottom: 1px solid #E1E5F3;/* 구분선 border */
+  }
+
+  .inquiry__input_lg textarea {
+    width: 100%;
+    margin-top: 6px;
+    height: 160px;
+    outline: none;
+    border: 1px solid #E1E5F3;
+    border-radius: 14px;
+    padding:50px 15px 10px 15px; /* label과 text겹치지 않게 */
     font-size: 16px;
   }
-  .inquiry__input input:focus,
-  .inquiry__input textarea:focus {
-    border: 1px solid #00639B;
-  }
-  .inquiry__input textarea {
-    height: 160px;
-  }
+
   .inquiry__btn {
     margin-top: 48px;
     width: 100%;
@@ -92,123 +132,82 @@
     line-height: 28px;
     border: none;
     color: #fff;
-    background-color:#6979DB;
+    background-color: #6979DB;
   }
+  
   .inquiry__btn:hover {
     background-color: #ABB2D4;
   }
   
-  @media screen and (max-width: 1200px) {
+  
+/* 추가: 태블릿 미디어 쿼리 */
+@media screen and (max-width: 1200px) {
     .inquiry__inner {
-        width: inherit;
-        max-width: 712px;
-        padding: 160px 0;
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-        -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-        flex-direction: column;
-      }
-      .inquiry__form {
-        width: initial;
-        margin-top: 78px;
-      }
-      .inquiry__form form {
-        display: -webkit-box;
-        display: -webkit-flex;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-orient: horizontal;
-        -webkit-box-direction: normal;
-        -webkit-flex-direction: row;
-        -ms-flex-direction: row;
-        flex-direction: row;
-        -webkit-flex-wrap: wrap;
-        -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-        -webkit-box-pack: justify;
-        -webkit-justify-content: space-between;
-        -ms-flex-pack: justify;
-        justify-content: space-between;
-        gap: 16px 24px;
-      }
-      .inquiry__input {
-        width: calc((100% - 24px) / 2);
-        display: -webkit-box;
-        display: -webkit-flex;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-        -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-        flex-direction: column;
-        font-weight: 600;
-      }
-      .inquiry__input + .inquiry__input {
-        margin-top: 0;
-      }
-      .inquiry__input:last-of-type {
         width: 100%;
-      }
+        padding: 70px 20px;
     }
-    @media screen and (max-width: 767px) {
-        .inquiry__inner {
-            padding: 80px 24px;
-          }
-          .inquiry__type {
-            display: inline-block;
-            font-size: 14px;
-            line-height: 20px;
-            font-weight: 500;
-            color: #A6A6A6;
-          }
-          .inquiry__description {
-            margin-top: 4px;
-            font-size: 24px;
-            line-height: 36px;
-            font-weight: 800;
-          }
-          .inquiry__sub-description {
-            display: inline-block;
-            margin-top: 16px;
-            font-size: 16px;
-            line-height: 24px;
-            font-weight: 500;
-            color: #DDDDDD;
-          }
-          .inquiry__form {
-            width: initial;
-            margin-top: 48px;
-          }
-          .inquiry__form form {
-            display: -webkit-box;
-            display: -webkit-flex;
-            display: -ms-flexbox;
-            display: flex;
-            -webkit-box-orient: horizontal;
-            -webkit-box-direction: normal;
-            -webkit-flex-direction: row;
-            -ms-flex-direction: row;
-            flex-direction: row;
-            -webkit-flex-wrap: wrap;
-            -ms-flex-wrap: wrap;
-            flex-wrap: wrap;
-            -webkit-box-pack: justify;
-            -webkit-justify-content: space-between;
-            -ms-flex-pack: justify;
-            justify-content: space-between;
-            gap: 16px 24px;
-          }
-          .inquiry__input {
-            width: 100%;
-          }
-          .inquiry__input label {
-            font-size: 14px;
-            line-height: 20px;
-            font-weight: 600;
-          }
-          .inquiry__btn {
-            margin-top: 32px;
-          }
-        }
+
+    .inquiry__form {
+        width: 100%;
+    }
+
+    .inquiry__row {
+        flex-direction: column;
+    }
+
+    .inquiry__input {
+        width: 100%;
+    }
+
+    .inquiry__input_lg {
+        width: 100%;
+    }
+
+    .inquiry__description {
+        font-size: 30px;
+        line-height: 48px;
+    }}
+
+/* 추가: 모바일 미디어 쿼리 */
+@media screen and (max-width: 767px) {
+    .inquiry__inner {
+        padding: 50px 16px;
+    }
+
+    .inquiry__type {
+        font-size: 24px;
+    }
+
+    .inquiry__description {
+        font-size: 26px;
+        line-height: 40px;
+    }
+
+    .inquiry__sub-description {
+        font-size: 16px;
+        line-height: 24px;
+    }
+
+    .inquiry__input label {
+        font-size: 16px;
+        width: 100px;
+        margin-top: 20px;
+    }
+
+    .inquiry__input input {
+        height: 56px;
+        padding-left: 120px;
+    }
+
+    .inquiry__input_lg label {
+        font-size: 16px;
+    }
+
+    .inquiry__input_lg textarea {
+        height: 140px;
+    }
+
+    .inquiry__btn {
+        font-size: 16px;
+        padding: 8px 0;
+    }}
