--- a/aionbook_theme/css/schoolgroup.css
+++ b/aionbook_theme/css/schoolgroup.css
@@ -33,7 +33,7 @@
     margin: 30px 0;
     display: flex;
     width: 270%;  /* 이미지들이 3배 크기로 복제되어 연속적으로 보이게 함 */
-    animation: slide 100s linear infinite;  /* 100초동안 천천히 무한 반복 */
+    animation: slide 10s linear infinite; 
   }
   
   .schoolgroup_item {
@@ -51,7 +51,7 @@
       transform: translateX(0);
     }
     100% {
-      transform: translateX(-50%);  /* 전체 너비의 절반만큼 이동 */
+      transform: translateX(-10%);  /* 재시작 위치 */
     }
   }
   
