--- a/aionbook_theme/css/common.css
+++ b/aionbook_theme/css/common.css
@@ -12,6 +12,13 @@
   src: url(../fonts/NanumSquareRoundEB.woff) format("woff");
 }
 
+@font-face {
+  font-family: 'Pretendard';
+  src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+
 .blind,
 .hidden {
   position: absolute;
