--- a/aionbook_theme/css/pricetable.css
+++ b/aionbook_theme/css/pricetable.css
@@ -111,14 +111,16 @@
       gap: 15px;
     }
     
-    .table_column {
-      width: calc(50% - 15px);
-      height: 400px;
-    }
-    
     .table_column.header {
       width: 100%;
       height: auto;
+      flex-direction: row;
+      border-radius: 14px;
+    }
+
+    .table_column {
+      width: 100%;
+      height: 101px;
       flex-direction: row;
       border-radius: 14px;
     }
@@ -143,20 +145,23 @@
       font-size: 24px;
       margin-bottom: 30px;
     }
+
+    .table_column.header {
+      flex-direction: row;
+    }
     
     .table_column {
       width: 100%;
-      height: auto;
-      min-height: 300px;
+      height: 101px;
+      flex-direction: row;
+      border-radius: 14px;
     }
     
-    .table_column.header {
-      flex-direction: column;
-    }
-    
+
     .header .cell {
       border-right: none;
       border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+      font-size: 18px;
     }
     
     .table_column .title {
@@ -170,6 +175,7 @@
     }
     
     .pricetable_text {
-      font-size: 12px;
+      font-size: 18px;
+      font-display: center;
     }
   }
