--- a/aionbook_theme/css/inquiry.css
+++ b/aionbook_theme/css/inquiry.css
@@ -140,23 +140,24 @@
   }
   
   
-/* 추가: 태블릿 및 데스크탑 미디어 쿼리 (max-width 1200px) */
+/* 태블릿 및 데스크탑 미디어 쿼리 (max-width 1200px) */
 @media screen and (max-width: 1200px) {
   .inquiry__inner {
     padding: 20px;
     max-width: calc(90%);
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
 }
   .inquiry__text{
-    max-width: calc(90%);
+    max-width: calc(90%); align-items: center; 
   }
   .inquiry__input input{
       width: 712px;
       height: 64px;
       justify-content: center;
   }
-
-
-  
+ 
   .inquiry__form {
     max-width: calc(90%);
   }
@@ -180,7 +181,7 @@
   }
 }
 
-/* 추가: 태블릿 미디어 쿼리 (max-width 768px) */
+/* 태블릿 미디어 쿼리 (max-width 768px) */
 @media screen and (max-width: 768px) {
   .inquiry__input input,
   .inquiry__input_lg textarea {
@@ -215,8 +216,7 @@
       padding: 8px 0;
   }
 }
-
-/* 추가: 모바일 미디어 쿼리 (max-width 375px) */
+/* 모바일 미디어 쿼리 (max-width 375px) */
 @media screen and (max-width: 375px) {
   .inquiry__input input,
   .inquiry__input_lg textarea {
